tests/NormalTests/paczka1/small_fuzzy/73616634.err
Error in line 1: 5gYbU A225 73,5
Error in line 6: 3td1oc7zdre A391 31,1
Error in line 10: 5gYbU A391 98,1
